--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Graphic Designer's Portfolio</title>
+    <title>Merve's Website</title>
     <link rel='stylesheet' type='text/css' href='styles.css'>
 </head>
 <body>
